# Proyecto_Robotica

./: .gitignore  README.md  README_PROYECTO.md  requirements-ai.txt
.agents/skills/ros2-engineering-skills/: SKILL.md
docs/: JUGADAS_DEMO_VOZ.md
presentacion/: guion.tex  plantilla.tex  presentacion_proyecto_robotica.tex
scripts/: run_demo_73.sh  setup_ai_venv.sh
src/chess_brain/: package.xml  setup.cfg  setup.py
src/chess_brain/chess_brain/: board_geometry.py  chess_engine.py  game_manager.py  msg_conversions.py
src/chess_bringup/: README_PROJECT.md  package.xml  setup.cfg  setup.py
src/chess_bringup/launch/: chess_full.launch.py  chess_sim_only.launch.py  test_utterance.launch.py
src/chess_description/: package.xml  setup.cfg  setup.py
src/chess_description/config/: dual_ros2_controllers.yaml
src/chess_description/urdf/: chess_board.urdf.xacro  chess_piece.urdf.xacro  dual_irb120_chess.urdf.xacro  dual_ros2_control.urdf.xacro  irb120_arm.urdf.xacro  irb120_with_gripper.urdf.xacro  magnetic_gripper.urdf.xacro
src/chess_gazebo/: package.xml  setup.cfg  setup.py
src/chess_gazebo/chess_gazebo/: spawn_chess_pieces.py
src/chess_gazebo/config/: board_layout.yaml
src/chess_gazebo/launch/: chess_gazebo.launch.py
src/chess_gazebo/worlds/: chess_world.sdf
src/chess_motion/: package.xml  setup.cfg  setup.py
src/chess_motion/chess_motion/: gazebo_attach.py  move_executor_node.py  piece_registry.py  pose_planner.py
src/chess_moveit_config/: package.xml  setup.cfg  setup.py
src/chess_moveit_config/config/: chess.rviz  chess.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/chess_moveit_config/launch/: moveit_chess.launch.py
src/chess_msgs/: CMakeLists.txt  package.xml
src/chess_msgs/action/: ExecuteChessMove.action
src/chess_msgs/msg/: BoardState.msg  ChessMove.msg  DetectedPiece.msg  Square.msg
src/chess_msgs/srv/: AttachPiece.srv  ParseVoiceCommand.srv  SetGripper.srv
src/chess_perception/: package.xml  setup.cfg  setup.py
src/chess_perception/chess_perception/: board_state_estimator.py  detectors.py  homography.py
src/chess_perception/config/: params.yaml
src/chess_perception/launch/: perception_pipeline.launch.py
src/chess_perception/models/: README_TRAINING.md
src/chess_voice/: package.xml  package_reorganization.md  setup.cfg  setup.py
src/chess_voice/chess_voice/: audio_capture.py  parsers.py  voice_parser_node.py  whisper_asr_node.py
src/chess_voice/config/: params.yaml
src/chess_voice/launch/: voice_pipeline.launch.py
src/irb120_jazzy_sim/: CAMBIOS.md  package.xml  setup.cfg  setup.py
src/irb120_jazzy_sim/config/: irb120.srdf  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/irb120_jazzy_sim/irb120_jazzy_sim/: _moveit_config.py  add_obstacle.py  move_to_clicked.py  move_to_joint.py
src/irb120_jazzy_sim/launch/: demo_full.launch.py  demo_obstacle.launch.py  full_irb120.launch.py  gz_irb120.launch.py  move_to_clicked.launch.py  move_to_joint.launch.py  moveit_irb120.launch.py
src/irb120_jazzy_sim/urdf/: irb120.urdf.xacro  irb120_macro.urdf.xacro  irb120_ros2control.xacro  irb120_transmission.xacro
src/irb120_jazzy_sim/urdf/abb_resources/: common_materials.xacro
src/irb120_jazzy_sim/worlds/: irb120_world.sdf
