<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_brain</name>
  <version>0.1.0</version>
  <description>Chess game state, rule validation (python-chess) and high-level orchestrator turning perception+voice into ChessMove goals for chess_motion.</description>
  <maintainer email="bloparev12@gmail.com">Pablo Revuelto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>chess_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
