<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch for the dual ABB IRB120 chess project: Gazebo + MoveIt + perception + voice + brain + motion.</description>
  <maintainer email="bloparev12@gmail.com">Pablo Revuelto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>chess_msgs</exec_depend>
  <exec_depend>chess_description</exec_depend>
  <exec_depend>chess_moveit_config</exec_depend>
  <exec_depend>chess_gazebo</exec_depend>
  <exec_depend>chess_perception</exec_depend>
  <exec_depend>chess_voice</exec_depend>
  <exec_depend>chess_brain</exec_depend>
  <exec_depend>chess_motion</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
