<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro descriptions for the dual ABB IRB120 chess scene: board, pieces, magnetic gripper and dual-arm composition.</description>
  <maintainer email="bloparev12@gmail.com">Pablo Revuelto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>irb120_jazzy_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
