<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration for the dual ABB IRB120 chess scene (two planning groups: white_arm and black_arm).</description>
  <maintainer email="bloparev12@gmail.com">Pablo Revuelto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>chess_description</exec_depend>
  <exec_depend>irb120_jazzy_sim</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
