<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_perception</name>
  <version>0.1.0</version>
  <description>Overhead camera-based board-state estimator. Supports a YOLOv8 backend (Ultralytics) and a TF ground-truth backend useful for testing without a trained model.</description>
  <maintainer email="bloparev12@gmail.com">Pablo Revuelto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>chess_msgs</exec_depend>
  <exec_depend>chess_brain</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
